<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black">


    <TextView
        android:id="@+id/heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/heading2"
        android:textColor="#BAFFFFFF"
        android:textSize="50dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading2"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/et_bg"
        android:hint="@string/me"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/passEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEt"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/et_bg"
        android:hint="@string/password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="italic" />


    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_below="@+id/passEt"
        android:layout_centerInParent="true"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="20dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/loginSignupTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/signupTxt"
        android:textColor="#BAFFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passEt"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:text="Forgot Password?"
        android:textColor="#BAFFFFFF"
        android:textSize="18sp" />
</RelativeLayout>