<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/heading"
        android:textColor="#BAFFFFFF"
        android:textSize="50dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:background="@drawable/et_bg"
        android:hint="@string/me"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/passEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/repassEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:hint="@string/re_enter_password"
        android:textColor="@color/black"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="500dp"
        android:layout_height="68dp"
        android:layout_below="@+id/repassEt"
        android:layout_centerInParent="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/black"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="18dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signupLogintv"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_below="@id/signupBtn"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/loginTxt"
        android:textColor="#BAFFFFFF"
        android:textSize="20sp" />

     />


</RelativeLayout>